# AGE

./: .gitignore  CMakeLists.txt  Makefile
AGE4/: AGE4.h  Actor.cc  Actor.h  ActorBehavior.cc  ActorBehavior.h  Axes.h  Bitmap.cc  Bitmap.h  Borders.h  CMakeLists.txt  Config.h  CursesController.cc  CursesController.h  CursesView.cc  CursesView.h  Game.cc  Game.h  InputActions.h  Makefile  Scene.cc  Scene.h  Status.cc  Status.h
Pong/: Ball.cc  Ball.h  CMakeLists.txt  Paddle.cc  Paddle.h  Scoreboard.cc  Scoreboard.h  main.cc
despair/: CMakeLists.txt  P.cc  P.h  X.cc  X.h  main.cc
